# fastapi-ddd-boilerplate

./: README.md  env.example  pyproject.toml
src/analytics/: __init__.py  __main__.py  app.py  config.py
src/analytics/api/: dependencies.py  routes.py  schemas.py
src/analytics/domain/: mixins.py  models.py  repositories.py  services.py
src/analytics/infra/: db.py  orm.py  repositories.py
