[project]
name = "analytics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.31.0",
    "attrs>=25.4.0",
    "dotenv>=0.9.9",
    "fastapi>=0.128.0",
    "greenlet>=3.3.0",
    "pydantic-settings>=2.12.0",
    "sqlalchemy>=2.0.45",
    "structlog>=25.5.0",
    "uvicorn>=0.40.0",
]

[build-system]
requires = ["uv_build>=0.9.21,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "ruff>=0.14.10",
]

[project.scripts]
analytics-api = "analytics.app:main"

[tool.ruff]
# Set the maximum line length
line-length = 88

[tool.ruff.lint]
# Enable specific rules (e.g., Pyflakes "F", Isort "I")
select = ["E", "F", "I"]
fixable = ["ALL"]

[tool.ruff.format]
# Use double quotes for strings, like Black
quote-style = "double"